Modularized homology code Added ransac

--- a/SLAM.ipynb
+++ b/SLAM.ipynb
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,6 +248,92 @@
     "    A = np.concatenate( As, axis=0 )\n",
     "    return A\n",
     "\n",
+    "def Fund_loss(F, p, p_):\n",
+    "    # 12.5.2 Multiple View Geometry\n",
+    "    # Algorithm proceeds as follows\n",
+    "    # Transform image coordinates so that the point of interest lie at origin\n",
+    "    # find epipolar line wrt t such that distance is minimized\n",
+    "    # TODO: find the point on these lines that minize distance between the lines in the origin\\\n",
+    "    # TODO: project 3d poiont X using these predicted image points on the lines\n",
+    "    \n",
+    "    T = np.array([[1, 0, -tx],\n",
+    "                  [0, 1, -ty],\n",
+    "                  [0, 0, 1]])\n",
+    "    T_ = np.array([[1, 0, -tx_],\n",
+    "                   [0, 1, -ty_],\n",
+    "                   [0, 0, 1]])\n",
+    "    \n",
+    "    F = inv(T_.T) @ F @ inv(T)\n",
+    "\n",
+    "    # e and e_ are solutions to F@e = 0 and e_@F=0 and will solve using SVD\n",
+    "    # \"However, due to noise, F’ may not be singular. So instead, next best thing is eigenvector associated with smallest eigenvalue of F\" (http://www.cse.psu.edu/~rtc12/CSE486/lecture19_6pp.pdf)\n",
+    "    e = solve_homogenous_Ax(F)\n",
+    "    e = e/e[2]\n",
+    "    # e_@F=0 we want to write this as a right multiplication and it is F.T @ e_ = 0\n",
+    "    e_= solve_homogenous_Ax(F.T)\n",
+    "    e_ = e_/e_[2]\n",
+    "    \n",
+    "    #now scale e so that e1^2 + e2^2 = 1 to construct the rotation matrix\n",
+    "    k = math.sqrt( 1/(e[0]**2 + e[1]**2))\n",
+    "    k_ = math.sqrt( 1/(e_[0]**2 + e_[1]**2))\n",
+    "    e = k*e\n",
+    "    e_ = k_*e_\n",
+    "    \n",
+    "    R = np.array([[  e[0], e[1], 0 ],\n",
+    "                  [ -e[1], e[0], 0 ],\n",
+    "                  [     0,    0, 1 ]])\n",
+    "    R_ = np.array([[  e_[0], e_[1], 0 ],\n",
+    "                  [ -e_[1], e_[0], 0 ],\n",
+    "                  [     0,    0, 1 ]])\n",
+    "    \n",
+    "    F = R@F@R.T\n",
+    "    \n",
+    "    # Construction equation to minimizae distance\n",
+    "    f, f_ = e[2], e_[2]\n",
+    "    a, b, c, d = F[2,2], F[2,3], F[3,2], F[3,3]\n",
+    "    # roots of  t((at+b)^2 +p^2(ct+d)^2 )^2-(ad-bc)(1+f^2t^2)^2(at+b)(ct+d)  (eq12.7) #f_ is p here\n",
+    "    # numpy.roots()\n",
+    "    # The algorithm relies on computing the eigenvalues of the companion matrix\n",
+    "    # Use the Collect( eq, t) in Wolfram\n",
+    "    # t^3 (6 a^2 b^2 + 2 a^2 d^2 f_^2 + 2 b c f^2 (b c - a d) + 2 a d f^2 (b c - a d) + 8 a b c d f_^2 + 2 b^2 c^2 f_^2 + 6 c^2 d^2 f_^4) + \n",
+    "    # t^5 (a^4 + 2 a^2 c^2 f_^2 + a d f^4 (b c - a d) + b c f^4 (b c - a d) + c^4 f_^4) +\n",
+    "    # t^4 (4 a^3 b + 4 a^2 c d f_^2 + 4 a b c^2 f_^2 + b d f^4 (b c - a d) + 2 a c f^2 (b c - a d) + 4 c^3 d f_^4) + \n",
+    "    # t (b c (b c - a d) + a d (b c - a d) + b^4 + 2 b^2 d^2 f_^2 + d^4 f_^4) + \n",
+    "    # t^2 (4 a b^3 + 2 b d f^2 (b c - a d) + a c (b c - a d) + 4 a b d^2 f_^2 + 4 b^2 c d f_^2 + 4 c d^3 f_^4) + \n",
+    "    # t^6 a c f^4 (b c - a d) + \n",
+    "    # b d (b c - a d)\n",
+    "    coeff_eq = [ a * c * f**4 * (b * c - a * d), #t^6\n",
+    "                (a**4 + 2 * a**2 * c**2 * f_**2 + a * d * f**4 * (b * c - a * d) + b * c * f**4 * (b * c - a * d) + c**4 * f_**4), #t^5\n",
+    "                (4 * a**3 * b + 4 * a**2 * c * d * f_**2 + 4 * a * b * c**2 * f_**2 + b * d * f**4 * (b * c - a * d) + 2 * a * c * f**2 * (b * c - a * d) + 4 * c**3 * d * f_**4), #t^4\n",
+    "                (6 * a**2 * b**2 + 2 * a**2 * d**2 * f_**2 + 2 * b * c * f**2 * (b * c - a * d) + 2 * a * d * f**2 * (b * c - a * d) + 8 * a * b * c * d * f_**2 + 2 * b**2 * c**2 * f_**2 + 6 * c**2 * d**2 * f_**4), #t^3\n",
+    "                (4 * a * b**3 + 2 * b * d * f**2 * (b * c - a * d) + a * c * (b * c - a * d) + 4 * a * b * d**2 * f_**2 + 4 * b**2 * c * d * f_**2 + 4 * c * d**3 * f_**4), #t^2\n",
+    "                (b * c * (b * c - a * d) + a * d * (b * c - a * d) + b**4 + 2 * b**2 * d**2 * f_**2 + d**4 * f_**4), #t^1\n",
+    "                b * d * (b * c - a * d)] #t^0\n",
+    "    real_roots = np.real( np.roots(coeff_eq) )\n",
+    "    def sq_dist(t, f,f_, a,b,c,d):\n",
+    "        return (t**2)/(1 + f**2*t**2) + ( (c*t+d)**2 )/( (a*t+b)**2 + f_**2*(c*t+d)**2 )\n",
+    "    \n",
+    "    sq_dists = [sq_dist(t,f,f_,a,b,c,d) for t in real_roots]\n",
+    "    min_t = np.argmin(sq_dists)\n",
+    "    return sq_dists[min_t]\n",
+    "    \n",
+    "def Fund_loss(F, P, P_):\n",
+    "    pass\n",
+    "    # For each pair of correspondences in P and P_,\n",
+    "    # We estimate the loss by finding image points predicted by F from one correspondence to another.\n",
+    "    # We do this by parameterizing the epipolar lines constructed from the epipole in IMG1 and projecting this line to IMG2\n",
+    "    # Then finding t (and consequently the line) that minimizes the distance between the point and the line (for IMG1 and IMG2)\n",
+    "    # The sum of distances between the line and point in IMG1 and IMG2 is the loss\n",
+    "    \n",
+    "    # It would be nice to return the epipolar line t and the corresponding predicted points since these will be used in the reconstruction\n",
+    "    \n",
+    "# Reconstruction the Motion\n",
+    "def Fund_RT(F):\n",
+    "    pass\n",
+    "# Reconstruction the Scene\n",
+    "def Fund_points(F):\n",
+    "    pass\n",
+    "\n",
     "def norm_RANSAC_Hom():\n",
     "    \n",
     "    pass\n",
@@ -268,7 +354,7 @@
     "#\n",
     "# (keep a collection of current best model and pick the best)\n",
     "\n",
-    "\n",
+    "   \n",
     "# Motion and Structure(depth) Recovery\n",
     "\n",
     "\n",
@@ -326,6 +412,105 @@
     "np.array( [3,2,3]) * np.array( [3,2,3])\n",
     "k = np.random.random( (3,3) )\n",
     "np.matmul(k,k) == k@k"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-9.65984291e-01 -2.58600231e-01 -5.19061692e-04]\n",
+      "[1.86102019e+03 4.98207120e+02 1.00000000e+00]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0.26708951])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "A = np.array([[-0.00310695, -0.0025646, 2.96584],\n",
+    "              [-0.028094, -0.00771621, 56.3813],\n",
+    "              [13.1905, -29.2007, -9999.79]])\n",
+    "\n",
+    "c = solve_homogenous_Ax(A)\n",
+    "print(c)\n",
+    "print(c/[c[2]])\n",
+    "c = np.array([[ 0.39879571, -0.91264384,  0.08968386]]).T\n",
+    "A.shape, c.shape\n",
+    "A[0,:].dot(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a,b,c,d,f,f_ = 1,2,3,4,5,6\n",
+    "t=1\n",
+    "\n",
+    "[t**6 * a * c * f**4 * (b * c - a * d),\n",
+    "t**5 * (a**4 + 2 * a**2 * c**2 * f_**2 + a * d * f**4 * (b * c - a * d) + b * c * f**4 * (b * c - a * d) + c**4 * f_**4),\n",
+    "t**4 * (4 * a**3 * b + 4 * a**2 * c * d * f_**2 + 4 * a * b * c**2 * f_**2 + b * d * f**4 * (b * c - a * d) + 2 * a * c * f**2 * (b * c - a * d) + 4 * c**3 * d * f_**4),\n",
+    "t**3 * (6 * a**2 * b**2 + 2 * a**2 * d**2 * f_**2 + 2 * b * c * f**2 * (b * c - a * d) + 2 * a * d * f**2 * (b * c - a * d) + 8 * a * b * c * d * f_**2 + 2 * b**2 * c**2 * f_**2 + 6 * c**2 * d**2 * f_**4),\n",
+    "t**2 * (4 * a * b**3 + 2 * b * d * f**2 * (b * c - a * d) + a * c * (b * c - a * d) + 4 * a * b * d**2 * f_**2 + 4 * b**2 * c * d * f_**2 + 4 * c * d**3 * f_**4),\n",
+    "t * (b * c * (b * c - a * d) + a * d * (b * c - a * d) + b**4 + 2 * b**2 * d**2 * f_**2 + d**4 * f_**4),\n",
+    "b * d * (b * c - a * d)]\n",
+    "import math\n",
+    "a = np.real( [-0.3125+0.46351241j,-0.3125+0.46351241j])\n",
+    "np.argmax(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "zip argument #1 must support iteration",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-89-85872b0e2dcd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mz\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: zip argument #1 must support iteration"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "a = list(range(5))\n",
+    "b = list(range(5))\n",
+    "\n",
+    "import random\n",
+    "z = list( zip(a,b) )\n",
+    "random.sample(z, 4)\n",
+    "random.shuffle(z)\n",
+    "a,b = zip(*z)\n"
    ]
   }
  ],
